--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -38,6 +38,35 @@ header {
   text-align: center;
 }
 
+.future__heading {
+  text-align: center;
+}
+
+.future__container {
+  &--img {
+    width: 100%;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  &--textbox {
+    text-align: center;
+    width: 80vw;
+    margin: 0 auto;
+  }
+  &--textbox1 {
+    margin-bottom: 2rem;
+  }
+  &--textbox2 {
+    margin-bottom: 2rem;
+  }
+  &--title {
+    margin-bottom: 1rem;
+    line-height: 2rem;
+  }
+  &--description {
+    line-height: 2rem;
+  }
+}
 .blogr__phonebox {
   &--img {
     width: 20%;
@@ -46,13 +75,6 @@ header {
 }
 
 .free__container {
-  &--img {
-    width: 20%;
-    height: 20%;
-  }
-}
-
-.future__container {
   &--img {
     width: 20%;
     height: 20%;
