--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,8 +40,16 @@ header {
   text-align: center;
 }
 
+main {
+  height: 1086px;
+}
+
 .future__heading {
   text-align: center;
+}
+
+.future__container {
+  padding-bottom: 2.5rem;
 }
 
 .future__container--img {
@@ -67,6 +75,7 @@ header {
 .future__container--title {
   margin-bottom: 1rem;
   line-height: 2rem;
+  letter-spacing: 1px;
 }
 
 .future__container--description {
@@ -74,8 +83,8 @@ header {
 }
 
 .blogr__phonebox--img {
-  width: 20%;
-  height: 20%;
+  width: 328px;
+  height: 347px;
 }
 
 .free__container--img {
