--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -38,11 +38,16 @@ header {
   text-align: center;
 }
 
+//  Designed for the future
+main {
+  height: 1086px;
+}
 .future__heading {
   text-align: center;
 }
 
 .future__container {
+  padding-bottom: 2.5rem;
   &--img {
     width: 100%;
     margin-top: 2rem;
@@ -62,6 +67,7 @@ header {
   &--title {
     margin-bottom: 1rem;
     line-height: 2rem;
+    letter-spacing: 1px;
   }
   &--description {
     line-height: 2rem;
@@ -69,8 +75,8 @@ header {
 }
 .blogr__phonebox {
   &--img {
-    width: 20%;
-    height: 20%;
+    width: 328px;
+    height: 347px;
   }
 }
 
