--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,16 +28,26 @@ header {
   margin: 0 auto;
   width: 75vw;
   text-align: center;
+  color: $white-text;
+
   &--title {
     margin-bottom: 1rem;
+    font-family: $overpass-semibold-font;
   }
   &--description {
     margin-bottom: 5rem;
+    font-family: $overpass-reg-font;
   }
 }
 
 .landing__button {
   text-align: center;
+  &--start {
+    font-family: $overpass-semibold-font;
+  }
+  &--learn {
+    font-family: $overpass-semibold-font;
+  }
 }
 
 //  Designed for the future
@@ -45,8 +55,9 @@ main {
   height: 1086px;
 }
 .future__heading {
-  //   text-align: center;
+  text-align: center;
   font-family: $overpass-semibold-font;
+  color: $darkblue-headingtext;
 }
 
 .future__container {
@@ -58,8 +69,6 @@ main {
   }
   &--textbox {
     text-align: center;
-    width: 80vw;
-    margin: 0 auto;
   }
   &--textbox1 {
     margin-bottom: 2rem;
@@ -71,9 +80,18 @@ main {
     margin-bottom: 1rem;
     line-height: 2rem;
     letter-spacing: 1px;
+    font-family: $overpass-semibold-font;
+    color: $darkblue-headingtext;
+    width: 85vw;
+    margin: 0 auto;
   }
   &--description {
-    line-height: 2rem;
+    line-height: 1.5rem;
+    width: 75vw;
+    margin: 0 auto;
+    padding-top: 20px;
+    font-family: $ubuntu-reg-font;
+    color: $darkgray-blue-bodytext;
   }
 }
 
