--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,8 +136,85 @@ main {
   height: 347px;
 }
 
+.state__container--textbox {
+  margin: 0 auto;
+  text-align: center;
+  width: 90vw;
+}
+
+.state__container--title {
+  width: 85vw;
+  margin-bottom: 1rem;
+  font-family: "Overpass SemiBold";
+}
+
+.state__container--description {
+  width: 80vw;
+  margin: 0 auto;
+  line-height: 1.7rem;
+  font-family: "Ubuntu Regular";
+}
+
+.free__container {
+  text-align: center;
+}
+
 .free__container--img {
-  width: 20%;
-  height: 20%;
+  width: 327px;
+  height: 323px;
+}
+
+.free__container--textbox {
+  margin: 0 auto;
+  width: 90vw;
+}
+
+.free__container--textbox1 {
+  margin-bottom: 1.5rem;
+}
+
+.free__container--title {
+  margin-bottom: 1rem;
+  font-family: "Overpass SemiBold";
+  color: #1f3f5b;
+}
+
+.free__container--description {
+  width: 72vw;
+  margin: 0 auto;
+  line-height: 1.7rem;
+  color: #4b5862;
+}
+
+footer {
+  margin-top: 5rem;
+  height: 800px;
+  text-align: center;
+}
+
+.footer__heading {
+  margin-bottom: 3rem;
+}
+
+.footer__container {
+  height: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__container--title {
+  margin-bottom: 2rem;
+}
+
+.footer__container--li {
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=styles.css.map */
