--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -103,11 +103,77 @@ main {
     height: 347px;
   }
 }
-// State of the Art
+
+// State of The Art Infrastructure
+.state__container {
+  //   height: 625px;
+  &--textbox {
+    margin: 0 auto;
+    text-align: center;
+    width: 90vw;
+  }
+  &--title {
+    width: 85vw;
+    margin-bottom: 1rem;
+    font-family: $overpass-semibold-font;
+  }
+  &--description {
+    width: 80vw;
+    margin: 0 auto;
+    line-height: 1.7rem;
+    font-family: $ubuntu-reg-font;
+  }
+}
+
+// Free Open Simple
 
 .free__container {
+  text-align: center;
+
   &--img {
-    width: 20%;
-    height: 20%;
+    width: 327px;
+    height: 323px;
+  }
+  &--textbox {
+    margin: 0 auto;
+    width: 90vw;
+  }
+  &--textbox1 {
+    margin-bottom: 1.5rem;
+  }
+  &--title {
+    margin-bottom: 1rem;
+    font-family: $overpass-semibold-font;
+    color: $darkblue-headingtext;
+  }
+  &--description {
+    width: 72vw;
+    margin: 0 auto;
+    line-height: 1.7rem;
+    color: $darkgray-blue-bodytext;
+  }
+}
+
+// Footer
+footer {
+  margin-top: 5rem;
+  height: 800px;
+  text-align: center;
+}
+
+.footer__heading {
+  margin-bottom: 3rem;
+}
+
+.footer__container {
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  &--title {
+    margin-bottom: 2rem;
+  }
+  &--li {
+    margin-bottom: 1rem;
   }
 }
