--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -98,30 +98,48 @@ main {
 //  Blogr Phones
 .blogr__phonebox {
   text-align: center;
+  margin-top: -12rem;
   &--img {
     width: 328px;
     height: 347px;
+    position: relative;
+    top: 185px;
   }
 }
 
 // State of The Art Infrastructure
 .state__container {
-  //   height: 625px;
+  height: 625px;
+  margin-bottom: 2rem;
+
+  background: linear-gradient(
+    to bottom,
+    $verydark-gray-blue,
+    $verydark-desatu-blue
+  );
+  border-top-right-radius: 120px;
+  border-bottom-left-radius: 120px;
   &--textbox {
+    background-image: url("../images/bg-pattern-circles.svg");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 500px;
     margin: 0 auto;
     text-align: center;
     width: 90vw;
+    color: $white-text;
   }
   &--title {
     width: 85vw;
     margin-bottom: 1rem;
+    padding-top: 10rem;
     font-family: $overpass-semibold-font;
   }
   &--description {
-    width: 80vw;
+    width: 71vw;
     margin: 0 auto;
     line-height: 1.7rem;
-    font-family: $ubuntu-reg-font;
+    font-family: $ubuntu-med-font;
   }
 }
 
@@ -175,7 +193,6 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: $ubuntu-med-font;
   &--title {
     margin-bottom: 2rem;
   }
