--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300&display=swap");
 * {
   padding: 0%;
   margin: 0%;
@@ -69,7 +70,7 @@ header {
 
 .landing__container--description {
   margin-bottom: 5rem;
-  font-family: "Overpass Regular";
+  font-family: "Overpass", sans-serif;
 }
 
 .landing__button {
@@ -136,7 +137,7 @@ main {
   letter-spacing: 1px;
   font-family: "Overpass SemiBold";
   color: #1f3f5b;
-  width: 85vw;
+  width: 70vw;
   margin: 0 auto;
 }
 
@@ -145,7 +146,7 @@ main {
   width: 75vw;
   margin: 0 auto;
   padding-top: 20px;
-  font-family: "Ubuntu Regular";
+  font-family: "Overpass", sans-serif;
   color: #4b5862;
 }
 
@@ -161,6 +162,13 @@ main {
   top: 185px;
 }
 
+.test2 {
+  background-image: url("../images/bg-pattern-circles.svg");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: 600px;
+}
+
 .state__container {
   height: 625px;
   margin-bottom: 2rem;
@@ -171,14 +179,10 @@ main {
 }
 
 .state__container--textbox {
-  background-image: url("../images/bg-pattern-circles.svg");
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-size: 500px;
-  margin: 0 auto;
   text-align: center;
   width: 90vw;
   color: white;
+  margin: 0 auto;
 }
 
 .state__container--title {
@@ -192,7 +196,7 @@ main {
   width: 71vw;
   margin: 0 auto;
   line-height: 1.7rem;
-  font-family: "Ubuntu Medium";
+  font-family: "Overpass", sans-serif;
 }
 
 .free__container {
@@ -200,8 +204,7 @@ main {
 }
 
 .free__container--img {
-  width: 327px;
-  height: 323px;
+  width: 375px;
 }
 
 .free__container--textbox {
@@ -224,6 +227,7 @@ main {
   margin: 0 auto;
   line-height: 1.7rem;
   color: #4b5862;
+  font-family: "Overpass", sans-serif;
 }
 
 footer {
@@ -253,6 +257,7 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  font-family: "Overpass", sans-serif;
 }
 
 .footer__container--title {
@@ -260,7 +265,7 @@ footer {
 }
 
 .footer__container--li {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   color: #c8c8cb;
 }
 /*# sourceMappingURL=styles.css.map */
