--- a/styles/_partial.scss
+++ b/styles/_partial.scss
@@ -51,9 +51,17 @@ $ubuntu-bold-font: "Ubuntu Bold";
 }
 
 //  Media Query
+$mobile: 375px;
 $desktop: 1440px;
+
 @mixin desktop {
   @media (min-width: $desktop) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media (max-width: $mobile) {
     @content;
   }
 }
