--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,7 +205,7 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
     width: 80vw;
     height: 70vh;
     top: 50px;
-    left: -100%;
+    left: 0px;
     -webkit-transition: 0.5s;
     transition: 0.5s;
     display: block;
@@ -217,11 +217,7 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
   }
 }
 
-.nav__links .nav__links__active {
-  left: 0;
-}
-
-.nav__links--dropdownli {
+.nav__links li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -229,10 +225,22 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
 }
 
 @media (max-width: 375px) {
-  .nav__links--dropdownli {
+  .nav__links li {
     margin-top: 1rem;
-    margin-bottom: 2.5rem;
   }
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  text-align: center;
+}
+
+.menu-arrow {
+  float: right;
+  position: relative;
+  right: 100px;
+  top: 5px;
 }
 
 @media (max-width: 375px) {
