Styled sign up button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,6 +267,18 @@ a {
   }
 }
 
+.signup-btn {
+  width: 30vw;
+  height: 6vh;
+  border-radius: 40px;
+  background-color: #ff525d;
+  color: white;
+  margin: 0 auto;
+  font-family: "Ubuntu Medium";
+  outline: none;
+  border: 0px;
+}
+
 main {
   height: 1086px;
 }
