--- a/styles/styles.css
+++ b/styles/styles.css
@@ -203,7 +203,7 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
   .nav__links {
     position: absolute;
     width: 80vw;
-    height: 70vh;
+    height: 80vh;
     top: 50px;
     left: 0px;
     -webkit-transition: 0.5s;
@@ -214,6 +214,7 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
     margin-left: 2.5rem;
     background-color: white;
     color: black;
+    border-radius: 5px;
   }
 }
 
@@ -236,7 +237,7 @@ a {
   text-align: center;
 }
 
-.menu-arrow {
+#menu-arrow {
   float: right;
   position: relative;
   right: 100px;
@@ -277,6 +278,25 @@ a {
   font-family: "Ubuntu Medium";
   outline: none;
   border: 0px;
+}
+
+.sub-menu {
+  display: none;
+}
+
+.sub-menu.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #c8c8cb;
+  width: 60vw;
+  margin: 0 auto;
+  color: #1f3f5b;
+  border-radius: 5px;
 }
 
 main {
