--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -355,11 +355,20 @@ a {
 .blogr__phonebox {
   text-align: center;
   margin-top: -12rem;
+  @include desktop {
+    display: flex;
+  }
   &--img {
     width: 328px;
     height: 347px;
     position: relative;
     top: 185px;
+    @include desktop {
+      width: 472px;
+      height: 499px;
+      top: 410px;
+      left: 105px;
+    }
   }
 }
 
@@ -410,13 +419,25 @@ a {
 
 .free__container {
   text-align: center;
+  @include desktop {
+    display: flex;
+    align-items: center;
+  }
 
   &--img {
     width: 375px;
+    @include desktop {
+      width: 50vw;
+      position: relative;
+      right: 202px;
+    }
   }
   &--textbox {
     margin: 0 auto;
     width: 90vw;
+    @include desktop {
+      text-align: left;
+    }
   }
   &--textbox1 {
     margin-bottom: 1.5rem;
@@ -432,6 +453,11 @@ a {
     line-height: 1.7rem;
     color: $darkgray-blue-bodytext;
     font-family: "Overpass", sans-serif;
+    @include desktop {
+      width: 35vw;
+      text-align: left;
+      margin: 0rem;
+    }
   }
 }
 
