--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -77,10 +77,17 @@ header {
     background-color: white;
     border: none;
     color: $cta-text;
+    cursor: pointer;
+
     @include desktop {
       margin-right: 0.5rem;
     }
   }
+  &--start:hover {
+    color: white;
+    background-color: $cta-hover-background;
+  }
+
   &--learn {
     font-family: $overpass-semibold-font;
     width: 100px;
@@ -90,6 +97,12 @@ header {
     background-color: transparent;
     text-decoration: none;
     color: $white-text;
+    cursor: pointer;
+  }
+
+  &--learn:hover {
+    background-color: white;
+    color: $cta-text;
   }
 }
 
@@ -183,10 +196,13 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
   }
 
   li {
+    font-family: $overpass-semibold-font;
     align-items: center;
     list-style: none;
+    cursor: pointer;
     @include mobile {
       margin-top: 1rem;
+      color: $darkblue-headingtext;
     }
   }
 }
@@ -201,6 +217,14 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
   }
 }
 
+.parent a:hover {
+  border-bottom: 2px solid white;
+}
+.sub-menu li:hover {
+  color: $darkgray-blue-bodytext;
+  font-family: $overpass-semibold-font;
+}
+
 .divider {
   @include mobile {
     width: 60vw;
@@ -213,8 +237,11 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
 
 a {
   text-decoration: none;
-  color: black;
+  color: $darkblue-headingtext;
   text-align: center;
+  @include desktop {
+    color: white;
+  }
 }
 
 #menu-arrow {
@@ -233,8 +260,9 @@ a {
 
 .log-in {
   text-decoration: none;
+  font-family: $overpass-semibold-font;
   @include mobile {
-    color: black;
+    color: $darkblue-headingtext;
     margin-bottom: 2rem;
   }
   @include desktop {
@@ -246,6 +274,7 @@ a {
 .signup-btn {
   font-family: $ubuntu-med-font;
   border: 0px;
+  cursor: pointer;
   @include mobile {
     width: 30vw;
     height: 6vh;
@@ -265,6 +294,13 @@ a {
   }
 }
 
+.signup-btn:hover {
+  @include desktop {
+    background-color: $cta-hover-background;
+    color: white;
+  }
+}
+
 .sub-menu {
   display: none;
 }
@@ -278,6 +314,12 @@ a {
   padding: 0.7rem;
   color: $darkblue-headingtext;
   border-radius: 5px;
+  @include desktop {
+    width: 8vw;
+    background-color: white;
+    color: black;
+    text-align: left;
+  }
 }
 
 //  Designed for the future
@@ -357,6 +399,7 @@ a {
   margin-top: -12rem;
   @include desktop {
     display: flex;
+    margin-top: -30rem;
   }
   &--img {
     width: 328px;
